--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Expensify </title>
     <link rel="icon" type="image/jpg" href="satt.jpg" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
